# PR-MiniMates-ComfyUI-6ce45808

./: README.md  __init__.py  pyproject.toml
doc/: base_upscale_workflow.json  base_workflow.json  video_driving_workflow.json
minimates/interface/: generate_move_template.py  interface_audio.py  matting.py  utils.py
minimates/obj_utils/: opengl_texture_render.py
